<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

        <TextView
            android:id="@+id/failure_header"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/failure_message"
            android:textSize="@android:dimen/notification_large_icon_height"
            android:layout_weight="0.08" />

        <TextView
            android:id="@+id/failure_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/failure_description"
            android:textSize="36sp"
            android:layout_weight="0.08" />


        <Button
            android:id="@+id/retry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.08"
            android:background="@drawable/button_selector_twitter"
            android:text="@string/retry"
            android:textAlignment="center"
            android:textSize="40sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/exit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.08"
            android:background="@drawable/button_selector"
            android:text="@string/settings"
            android:textAlignment="center"
            android:textSize="40sp"
            android:textStyle="bold" />
    </LinearLayout>