<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

    <TextView
        android:id="@+id/twitter_yes_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.14"
        android:background="@android:color/darker_gray"
        android:text="@string/login_twitter"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="@android:color/background_dark"
        android:textIsSelectable="false"
        android:textSize="36sp"
        android:textStyle="bold" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/twitter_yes_content1"
            android:layout_width="match_parent"
            android:layout_height="112dp"
            android:background="@android:color/darker_gray"
            android:text="@string/twitter_yes_content1"
            android:textAlignment="viewStart"
            android:textAllCaps="false"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:typeface="serif" />

    </LinearLayout>

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/username_hint"
        android:inputType="text|textEmailAddress|textPersonName" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        tools:inputType="text|textPassword|number|numberPassword" />

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="68dp"
        android:background="@android:color/darker_gray"
        android:layout_weight="0.25">

        <Button
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginEnd="57dp"
            android:layout_marginRight="57dp"
            android:background="@drawable/button_selector"
            android:text="@string/cancel"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textStyle="bold"
            android:visibility="visible" />


        <Button
            android:id="@+id/no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="12dp"
            android:layout_marginStart="12dp"
            android:background="@drawable/button_selector_twitter"
            android:text="@string/authorize"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@android:color/background_light"
            android:textSize="24sp"
            android:textStyle="bold"
            android:typeface="normal" />

        <TextView
            android:id="@+id/forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"
            android:textColor="@color/colorPrimaryDark"
            android:textColorHighlight="@android:color/background_dark"
            android:textSize="20sp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginRight="12dp"
            android:layout_marginEnd="12dp" />

    </RelativeLayout>

    <TextView
        android:id="@+id/twitter_yes_content2"
        android:layout_width="match_parent"
        android:layout_height="117dp"
        android:layout_weight="1.05"
        android:background="@android:color/darker_gray"
        android:text="@string/twitter_yes_content2"
        android:textAlignment="viewStart"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="italic"
        android:typeface="serif" />


</LinearLayout>