<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="0.7">

    <TextView
        android:id="@+id/description_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:hint="@string/description_title"
        android:lineSpacingExtra="12sp"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/description_content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.65"
        android:ems="10"
        android:fontFamily="serif"
        android:hint="@string/description_hint"
        android:inputType="text"
        android:textAlignment="center"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/attach_below"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/background_light"
        android:text="Attach Image Below"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="?attr/actionModeSplitBackground"
        android:textSize="30sp"
        android:textStyle="bold" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.03">

        <ImageButton
            android:id="@+id/imageButton"
            style="@android:style/Widget.DeviceDefault.ImageButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:background="@drawable/button_selector"
            app:srcCompat="@android:drawable/ic_input_add" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <Button
            android:id="@+id/send"
            android:layout_width="182dp"
            android:layout_height="wrap_content"
            android:background="@drawable/button_selector_twitter"
            android:text="@string/send"
            android:textSize="30sp"
            android:layout_alignBottom="@+id/cancel" />

        <Button
            android:id="@+id/cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/send"
            android:background="@drawable/button_selector"
            android:text="@string/cancel"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_toRightOf="@+id/send" />
    </RelativeLayout>

</LinearLayout>