<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorTwitter"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    android:id="@+id/relativeLayout"
    >

    <RelativeLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <Button
            android:id="@+id/yes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="79dp"
            android:layout_marginStart="79dp"
            android:text="@string/yes"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textStyle="bold"
            android:visibility="visible"
            android:background="@drawable/button_selector"/>


        <Button
            android:id="@+id/no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="17dp"
            android:layout_marginStart="17dp"
            android:layout_toEndOf="@+id/yes"
            android:layout_toRightOf="@+id/yes"
            android:text="@string/no"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textStyle="bold"
            android:background="@drawable/button_selector"/>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="330dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/you_shopped_at"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/you_shopped_at"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="35sp"
            android:textStyle="bold|italic"
            android:typeface="serif"
            android:visibility="visible" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="45dp"
        android:layout_marginTop="131dp"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/twitter"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/twitter"
            android:textAllCaps="false"
            android:textColor="@android:color/background_dark"
            android:textSize="60sp"
            android:background="@drawable/test"
            android:textStyle="bold" />

    </LinearLayout>


</RelativeLayout>